prova vlc